--- a/asvla/package.json
+++ b/asvla/package.json
@@ -17,7 +17,6 @@
     "@mui/styled-engine-sc": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.79.3",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14"
   },
@@ -30,6 +29,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "sass": "^1.79.4",
+    "sass-loader": "^16.0.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
