feat: update code

--- a/asvla/package.json
+++ b/asvla/package.json
@@ -38,7 +38,6 @@
     "sass-loader": "^16.0.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "proxy": "http://10.10.12.165:3306/"
+    "vite": "^5.4.1"
   }
 }
